--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,21 @@
 language: python
 python:
   - "3.6"
+addons:
+  apt:
+    sources:
+      - mysql-5.7-trusty
+    packages:
+      - postgresql-10
+      - postgresql-client-10
+      - mysql-server
+      - mysql-client
 before_install:
   - pip install pycodestyle
   - python3 setup.py install
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
+  - mysql -e 'CREATE DATABASE myapp_test;'
 script:
   - pycodestyle --exclude=venv --ignore=E501 .
   - pytest
