--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,11 @@ env:
   global:
   - PGPORT=5433
 before_install:
+  - cp src/unittest/utils/postgres/pg_hba.conf /etc/postgresql/10/main/pg_hba.conf
+  - sudo service postgresql restart
+  - sudo mysql -e "use mysql; update user set authentication_string=PASSWORD('my_password') where User='root'; update user set plugin='mysql_native_password';FLUSH PRIVILEGES;"
+  - sudo mysql_upgrade
+  - sudo service mysql restart
   - pip install pycodestyle
   - python3 setup.py install
 before_script:
