--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,13 @@ __pycache__/
 build/
 dist/
 venv/
+.pytest_cache
 
 # Mac
 .DS_Store
+
+# tests
+src/unittest/utils/config/dbschema2.yml
 
 # Misc
 tests/
