--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,17 @@
 language: python
 python:
   - "3.6"
+services:
+  - mysql
+  - postgresql
 before_install:
   - pip install pycodestyle
+  - python3 setup.py install
+before_script:
+  - psql -c 'create database my_db;' -U postgres
+  - psql -f schema/postgresql.sql my_db -U postgres
+  - mysql -e 'CREATE DATABASE my_db;'
+  - mysql my_db < schema/mysql.sql
 script:
   - pycodestyle --exclude=venv --ignore=E501 .
+  - pytest
