--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,10 @@ before_install:
   - python3 setup.py install
 before_script:
   - psql -c 'create database my_db;' -U postgres
+  - psql -c 'create database my_empty_db;' -U postgres
   - psql -f schema/postgresql.sql my_db -U postgres
   - mysql -e 'CREATE DATABASE my_db;'
+  - mysql -e 'CREATE DATABASE my_empty_db;'
   - mysql my_db < schema/mysql.sql
 script:
   - pycodestyle --exclude=venv --ignore=E501 .
