Improved code coverage (#18)
* Improved code coverage

* More coverage

* More coverage

* YML file for empty databases

* More code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,13 @@ services:
 before_install:
   - pip install pycodestyle codecov
   - python3 setup.py install
+  - cp src/unittest/utils/config/dbschema.yml ~/.dbschema.yml
 before_script:
   - psql -c 'create database my_db;' -U postgres
+  - psql -c 'create database my_empty_db;' -U postgres
   - psql -f schema/postgresql.sql my_db -U postgres
   - mysql -e 'CREATE DATABASE my_db;'
+  - mysql -e 'CREATE DATABASE my_empty_db;'
   - mysql my_db < schema/mysql.sql
 script:
   - pycodestyle --exclude=venv --ignore=E501 .
