--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
   - "3.6"
+addons:
+  postgresql: "9.6"
 services:
   - mysql
   - postgresql
@@ -18,6 +20,7 @@ before_script:
 script:
   - pycodestyle --exclude=venv --ignore=E501 .
   - pytest
+  - dbschema --config src/unittest/utils/config/dbschema_functional_test.yml
   - coverage run --branch --source=. -m unittest discover -bv
   - coverage report -m
 after_success:
