--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,10 +46,14 @@ jobs:
           psql -h localhost -f schema/postgresql.sql -d my_db_functional_test -U db_user
         env:
           PGPASSWORD: db_password
+      - name: Install deb dependencies
+        run: |
+          sudo apt update
+          sudo apt install pandoc
       - name: Install dependencies
         run: |
           pip install -U pip
-          pip install pycodestyle coverage pytest
+          pip install pycodestyle coverage pytest pypandoc
           python setup.py install
       - name: Copy config file
         run: |
